--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,15 +1,29 @@
-.landingLogo {
-    width: 60px;
-    margin-top: -10px;
-}
-
-nav {
+.navbar {
     background-color: rgb(202, 250, 250);
     height: 70px;
+}
+
+.catchphrase {
+    margin-left: -50px; 
+}
+
+.navbar-button {
+    background-color: rgb(237, 171, 72); 
+    outline: none; 
+    border-radius: 5px;
 }
 
 .hero {
     background-image: url("../img/paris.jpg");
     background-size: cover;
     height: 500px;
+}
+
+.welcome {
+    background-color: rgba(228, 170, 82, 0.5);
+    padding: 50px;
+    border-radius: 20px;
+    margin-left: 20px;
+    justify-content: right;
+    align-items: center;
 }
