--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,3 +13,25 @@ nav {
     background-size: cover;
     height: 500px;
 }
+
+.card-title {
+    text-align: center;
+    margin: -30px 30% 0 30%;
+    padding: 5px;
+    border: 2px solid lightblue;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.card-text {
+    margin-top: 20px;
+    margin-bottom: 25px;
+}
+
+.movie-poster {
+    height: 350px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
