Implemented footer changes to landing HTML

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,3 +55,13 @@
     margin-right: auto;
     width: 50%;
 }
+
+.py-5{
+    background:#eee;
+    margin-top: 4em;
+}
+.sign-up{
+    background-color: #5caa59;
+    border: 1px solid #5caa59;
+    color: #fff;
+}
