--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,6 +55,18 @@ body {
     text-align: left;
 }
 
+.foodTitle {
+    margin: 30px 0 20px 0;
+    font-weight: 700;
+    text-align: center;
+}
+
+.foodImg {
+    max-width: 100%;
+    max-height: 100%;
+    margin-bottom: 20px;
+}
+
 .movies-card {
     background:#eee;
     border: 1px solid #eee;
