--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,8 +2,12 @@ body {
    background: #eee;
 }
 
+:root {
+    --navblue: rgb(202, 250, 250);
+}
+
 .navbar {
-    background-color: rgb(202, 250, 250);
+    background-color: var(--navblue);
     height: 80px;
 }
 
@@ -36,7 +40,7 @@ body {
     text-align: center;
     margin: -30px 30% 0 30%;
     padding: 5px;
-    border: 2px solid lightblue;
+    border: 2px solid var(--navblue);
     background-color: white;
     border-radius: 10px;
 }
@@ -45,6 +49,8 @@ body {
     margin-top: 20px;
     margin-bottom: 25px;
 }
+
+
 
 #weather {
     background: rgb(164,255,255);
@@ -61,10 +67,20 @@ body {
     text-align: center;
 }
 
+#food {
+    text-align: center;
+}
+
 .foodImg {
     max-width: 100%;
     max-height: 100%;
     margin-bottom: 20px;
+    border: 2px solid var(--navblue);
+    padding: 10px;
+}
+
+#food a {
+    display: block;
 }
 
 .movies-card {
