--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,67 +1,119 @@
-.navbar {
-    background-color: rgb(202, 250, 250);
-    height: 80px;
-}
-
-.landing-logo {
-    margin-top: -2px;
-}
-
-.catchphrase {
-    margin-left: -50px; 
-}
-
-.btn {
-    background-color: rgb(236, 170, 72); 
-    outline: none; 
-    border-radius: 5px;
-    padding: 8px;
-}
-
-.hero {
-    background-image: url("../img/paris.jpg");
-    background-size: cover;
-    height: 500px;
-}
-
-#welcome-text {
-    background-color: rgba(228, 170, 82, 0.5);
-    padding: 40px;
-    justify-content: center;
-    border-radius: 20px;
-    width: 600px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-.card-title {
-    text-align: center;
-    margin: -30px 30% 0 30%;
-    padding: 5px;
-    border: 2px solid lightblue;
-    background-color: white;
-    border-radius: 10px;
-}
-
-.card-text {
-    margin-top: 20px;
-    margin-bottom: 25px;
-}
-
-.movie-poster {
-    height: 350px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-
-.py-5{
-    background:#eee;
-    margin-top: 4em;
-}
-.sign-up{
-    background-color: #5caa59;
-    border: 1px solid #5caa59;
-    color: #fff;
-}
+body {
+    background: #eee;
+ }
+ 
+ :root {
+     --navblue: rgb(202, 250, 250);
+ }
+ 
+ .navbar {
+     background-color: var(--navblue);
+     height: 80px;
+ }
+ 
+ .landing-logo {
+     margin-top: -2px;
+ }
+ 
+ .catchphrase {
+     margin-left: -50px; 
+ }
+ 
+ .btn {
+     background-color: rgb(236, 170, 72); 
+     outline: none; 
+     border-radius: 5px;
+     padding: 8px;
+ }
+ 
+ #welcome-text {
+     background-color: rgba(228, 170, 82, 0.5);
+     padding: 40px;
+     justify-content: center;
+     border-radius: 20px;
+     width: 600px;
+     margin-top: 100px;
+     margin-bottom: 100px;
+ }
+ 
+ .card-title {
+     text-align: center;
+     margin: -30px 30% 0 30%;
+     padding: 5px;
+     border: 2px solid var(--navblue);
+     background-color: white;
+     border-radius: 10px;
+ }
+ 
+ .card-text {
+     margin-top: 20px;
+     margin-bottom: 25px;
+ }
+ 
+ 
+ 
+ #weather {
+     background: rgb(164,255,255);
+     background: linear-gradient(90deg, rgba(164,255,255,1) 0%, rgba(202,255,255,1) 74%, rgba(222,255,255,1) 100%);
+ }
+ 
+ #weather p {
+     text-align: left;
+ }
+ 
+ .foodTitle {
+     margin: 30px 0 20px 0;
+     font-weight: 700;
+     text-align: center;
+ }
+ 
+ #food {
+     text-align: center;
+ }
+ 
+ .foodImg {
+     max-width: 100%;
+     max-height: 100%;
+     margin-bottom: 20px;
+     border: 2px solid var(--navblue);
+     padding: 10px;
+ }
+ 
+ #food a {
+     display: block;
+ }
+ 
+ .movies-card {
+     background:#eee;
+     border: 1px solid #eee;
+ }
+ 
+ .carousel {
+     height: auto;
+     text-align: center;
+ }
+ 
+ .carousel-caption {
+     padding: 10px 20px;
+     border: 1px solid white;
+     background-color: rgba(255,255,255,0.7);
+ }
+ 
+ footer {
+     background:#eee;
+     margin-top: 4em;
+     border-top: 3px solid white;
+ }
+ 
+ .sign-up{
+     background-color: #5caa59;
+     border: 1px solid #5caa59;
+     color: #fff;
+ }
+ 
+ .carousel-img {
+     object-fit: cover;
+     object-position: center;
+     height: 100vh;
+     overflow: hidden;
+ }
