--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,6 +60,12 @@ body {
  #weather p {
      text-align: left;
  }
+
+ .mainCard {
+    background-color: #eee;
+    border: transparent;
+    border-radius: 0;
+ }
  
  .foodTitle {
      margin: 30px 0 20px 0;
@@ -85,7 +91,7 @@ body {
  
  .movies-card {
      background:#eee;
-     border: 1px solid #eee;
+     border: transparent;
  }
  
  .carousel {
@@ -117,9 +123,7 @@ body {
      height: 100vh;
      overflow: hidden;
  }
-=======
-   background: #eee;
-}
+
 
 :root {
     --navblue: rgb(202, 250, 250);
