--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,6 +132,7 @@ body {
 .navbar {
     background-color: var(--navblue);
     height: 80px;
+    display: flex;
 }
 
 .landing-logo {
@@ -142,7 +143,16 @@ body {
     margin-left: -50px; 
 }
 
-.btn {
+.menu-button {
+    background-color: rgb(236, 170, 72); 
+    outline: none; 
+    border-radius: 5px;
+    margin-right: 10px;
+    padding: 8px;
+    justify-content: space-between;
+}
+
+.getInTouchBtn {
     background-color: rgb(236, 170, 72); 
     outline: none; 
     border-radius: 5px;
