--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,8 +131,28 @@ body {
 
 .navbar {
     background-color: var(--navblue);
-    height: 80px;
+}
+
+.nav-buttons {
     display: flex;
+}
+
+#dropdownMenuButton {
+    background-color: rgb(236, 170, 72); 
+    border-radius: 5px;
+    margin-right: 10px;
+    padding: 8px;
+    width: 100px;
+    justify-content: right;
+    color: black;
+}
+
+.getInTouchBtn {
+    background-color: rgb(236, 170, 72); 
+    border-radius: 5px;
+    outline: black;
+    width: 100px;
+    padding: 8px;
 }
 
 .landing-logo {
@@ -141,22 +161,6 @@ body {
 
 .catchphrase {
     margin-left: -50px; 
-}
-
-.menu-button {
-    background-color: rgb(236, 170, 72); 
-    outline: none; 
-    border-radius: 5px;
-    margin-right: 10px;
-    padding: 8px;
-    justify-content: space-between;
-}
-
-.getInTouchBtn {
-    background-color: rgb(236, 170, 72); 
-    outline: none; 
-    border-radius: 5px;
-    padding: 8px;
 }
 
 #welcome-text {
