First changes to styling the landing.html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,13 +1,15 @@
 body {
-    background: #eee;
- }
+    background-color: #FFFFFF;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='101' height='101' viewBox='0 0 200 200'%3E%3Cg %3E%3Cpolygon fill='%2300b1b2' points='100 57.1 64 93.1 71.5 100.6 100 72.1'/%3E%3Cpolygon fill='%2300d7d8' points='100 57.1 100 72.1 128.6 100.6 136.1 93.1'/%3E%3Cpolygon fill='%2300b1b2' points='100 163.2 100 178.2 170.7 107.5 170.8 92.4'/%3E%3Cpolygon fill='%2300d7d8' points='100 163.2 29.2 92.5 29.2 107.5 100 178.2'/%3E%3Cpath fill='%2300FFFF' d='M100 21.8L29.2 92.5l70.7 70.7l70.7-70.7L100 21.8z M100 127.9L64.6 92.5L100 57.1l35.4 35.4L100 127.9z'/%3E%3Cpolygon fill='%2300a0b8' points='0 157.1 0 172.1 28.6 200.6 36.1 193.1'/%3E%3Cpolygon fill='%2300c2db' points='70.7 200 70.8 192.4 63.2 200'/%3E%3Cpolygon fill='%2304E6FF' points='27.8 200 63.2 200 70.7 192.5 0 121.8 0 157.2 35.3 192.5'/%3E%3Cpolygon fill='%2300c2db' points='200 157.1 164 193.1 171.5 200.6 200 172.1'/%3E%3Cpolygon fill='%2300a0b8' points='136.7 200 129.2 192.5 129.2 200'/%3E%3Cpolygon fill='%2304E6FF' points='172.1 200 164.6 192.5 200 157.1 200 157.2 200 121.8 200 121.8 129.2 192.5 136.7 200'/%3E%3Cpolygon fill='%2300a0b8' points='129.2 0 129.2 7.5 200 78.2 200 63.2 136.7 0'/%3E%3Cpolygon fill='%2304E6FF' points='200 27.8 200 27.9 172.1 0 136.7 0 200 63.2 200 63.2'/%3E%3Cpolygon fill='%2300c2db' points='63.2 0 0 63.2 0 78.2 70.7 7.5 70.7 0'/%3E%3Cpolygon fill='%2304E6FF' points='0 63.2 63.2 0 27.8 0 0 27.8'/%3E%3C/g%3E%3C/svg%3E");
+    font-family: 'Raleway', sans-serif;
+}
  
  :root {
      --navblue: rgb(202, 250, 250);
  }
  
  .navbar {
-     background-color: var(--navblue);
+     background-color: #FFFFFF;
      height: 80px;
  }
  
@@ -50,7 +52,10 @@ body {
      margin-bottom: 25px;
  }
  
- 
+ .card-body{
+    background: rgb(255,255,255);
+    background: linear-gradient(120deg, rgba(255,255,255,1) 65%, rgba(0,238,255,1) 85%, rgba(0,255,255,1) 100%);
+} 
  
  #weather {
      background: rgb(164,255,255);
@@ -62,7 +67,7 @@ body {
  }
 
  .mainCard {
-    background-color: #eee;
+    background-color: transparent;
     border: transparent;
     border-radius: 0;
  }
@@ -123,12 +128,6 @@ body {
      background-color: rgba(255,255,255,0.7);
  }
  
- footer {
-     background:#eee;
-     margin-top: 4em;
-     border-top: 3px solid white;
- }
- 
  .sign-up{
      background-color: #5caa59;
      border: 1px solid #5caa59;
@@ -145,10 +144,6 @@ body {
 
 :root {
     --navblue: rgb(202, 250, 250);
-}
-
-.navbar {
-    background-color: var(--navblue);
 }
 
 .nav-buttons {
@@ -255,9 +250,7 @@ body {
 }
 
 footer {
-    background:#eee;
-    margin-top: 4em;
-    border-top: 3px solid white;
+    background: transparent;
 }
 
 .sign-up{
