Added creators to footer with link to GitHub

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: #FFFFFF;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='101' height='101' viewBox='0 0 200 200'%3E%3Cg %3E%3Cpolygon fill='%2300b1b2' points='100 57.1 64 93.1 71.5 100.6 100 72.1'/%3E%3Cpolygon fill='%2300d7d8' points='100 57.1 100 72.1 128.6 100.6 136.1 93.1'/%3E%3Cpolygon fill='%2300b1b2' points='100 163.2 100 178.2 170.7 107.5 170.8 92.4'/%3E%3Cpolygon fill='%2300d7d8' points='100 163.2 29.2 92.5 29.2 107.5 100 178.2'/%3E%3Cpath fill='%2300FFFF' d='M100 21.8L29.2 92.5l70.7 70.7l70.7-70.7L100 21.8z M100 127.9L64.6 92.5L100 57.1l35.4 35.4L100 127.9z'/%3E%3Cpolygon fill='%2300a0b8' points='0 157.1 0 172.1 28.6 200.6 36.1 193.1'/%3E%3Cpolygon fill='%2300c2db' points='70.7 200 70.8 192.4 63.2 200'/%3E%3Cpolygon fill='%2304E6FF' points='27.8 200 63.2 200 70.7 192.5 0 121.8 0 157.2 35.3 192.5'/%3E%3Cpolygon fill='%2300c2db' points='200 157.1 164 193.1 171.5 200.6 200 172.1'/%3E%3Cpolygon fill='%2300a0b8' points='136.7 200 129.2 192.5 129.2 200'/%3E%3Cpolygon fill='%2304E6FF' points='172.1 200 164.6 192.5 200 157.1 200 157.2 200 121.8 200 121.8 129.2 192.5 136.7 200'/%3E%3Cpolygon fill='%2300a0b8' points='129.2 0 129.2 7.5 200 78.2 200 63.2 136.7 0'/%3E%3Cpolygon fill='%2304E6FF' points='200 27.8 200 27.9 172.1 0 136.7 0 200 63.2 200 63.2'/%3E%3Cpolygon fill='%2300c2db' points='63.2 0 0 63.2 0 78.2 70.7 7.5 70.7 0'/%3E%3Cpolygon fill='%2304E6FF' points='0 63.2 63.2 0 27.8 0 0 27.8'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
     font-family: 'Raleway', sans-serif;
 }
  
@@ -9,8 +10,12 @@ body {
  }
  
  .navbar {
-     background-color: #FFFFFF;
-     height: 80px;
+    background: rgba( 255, 255, 255, 0.3 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
  }
  
  .landing-logo {
@@ -22,7 +27,7 @@ body {
  }
  
  .btn {
-     background-color: rgb(236, 170, 72); 
+     background-color: #00FFFF;
      outline: none; 
      border-radius: 5px;
      padding: 8px;
@@ -155,7 +160,7 @@ body {
 }
 
 #dropdownMenuButton {
-    background-color: rgb(236, 170, 72); 
+    background-color: #00FFFF;
     border-radius: 5px;
     margin-right: 10px;
     padding: 8px;
@@ -165,7 +170,7 @@ body {
 }
 
 .getInTouchBtn {
-    background-color: rgb(236, 170, 72); 
+    background-color: #00FFFF;
     border-radius: 5px;
     outline: black;
     width: 100px;
@@ -254,7 +259,12 @@ body {
 }
 
 footer {
-    background: white;
+    background: rgba( 255, 255, 255, 0.3 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+        -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .sign-up{
@@ -278,6 +288,10 @@ footer {
 .hero-section .card {
     width: 100%;
     margin-bottom: 20px;
+}
+
+.dropdown-item:hover {
+    background-color: #00FFFF;
 }
 
 /* For larger screens */
