--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,185 +4,30 @@ body {
     background-attachment: fixed;
     font-family: 'Raleway', sans-serif;
 }
- 
- :root {
-     --navblue: rgb(202, 250, 250);
- }
- 
- .navbar {
-    background: rgba( 255, 255, 255, 0.3 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
- }
- 
- .landing-logo {
-     margin-top: -2px;
- }
- 
- .catchphrase {
-     margin-left: -50px; 
- }
- 
- .btn {
-     background-color: #00FFFF;
-     outline: none; 
-     border-radius: 5px;
-     padding: 8px;
- }
- 
- #welcome-text {
-     background-color: rgba(228, 170, 82, 0.5);
-     padding: 40px;
-     justify-content: center;
-     border-radius: 20px;
-     width: 600px;
-     margin-top: 100px;
-     margin-bottom: 100px;
- }
- 
- .card-title {
-     text-align: center;
-     margin: -30px 30% 0 30%;
-     padding: 5px;
-     border: 2px solid var(--navblue);
-     background-color: white;
-     border-radius: 10px;
- }
- 
- h3{
-    text-align: center;
- }
-
- .card-text {
-     margin-top: 20px;
-     margin-bottom: 25px;
- }
- 
- .card-body{
-    background: rgb(255,255,255);
-    background: linear-gradient(120deg, rgba(255,255,255,1) 65%, rgba(0,238,255,1) 85%, rgba(0,255,255,1) 100%);
-} 
- 
- #weather {
-     background: rgb(164,255,255);
-     background: linear-gradient(90deg, rgba(164,255,255,1) 0%, rgba(202,255,255,1) 74%, rgba(222,255,255,1) 100%);
- }
- 
- #weather p {
-     text-align: left;
- }
-
- .mainCard {
-    background-color: transparent;
-    border: transparent;
-    border-radius: 0;
- }
- 
- .foodTitle {
-     margin: 30px 0 20px 0;
-     font-weight: 700;
-     text-align: center;
- }
- 
- #food {
-     text-align: center;
- }
- 
- .foodImg {
-     max-width: 100%;
-     max-height: 100%;
-     margin-bottom: 20px;
-     border: 2px solid var(--navblue);
-     padding: 10px;
- }
-
- .pizzaImage {
-    max-width: 300px;
-    max-height: 300px;
-    margin-bottom: 20px;
-    border: 2px solid var(--navblue);
-    padding: 10px;
-}
- 
- #food a {
-     display: block;
-
- }
-
- .food-container {
-    display: flex;
- }
-
- #list {
-    text-align: left;
-    margin-left: 40px;
- }
- 
- .movies-card {
-     background:#eee;
-     border: transparent;
- }
- 
- .carousel {
-     height: auto;
-     text-align: center;
- }
- 
- .carousel-caption {
-     padding: 10px 20px;
-     border: 1px solid white;
-     background-color: rgba(255,255,255,0.7);
- }
- 
- .sign-up{
-     background-color: #5caa59;
-     border: 1px solid #5caa59;
-     color: #fff;
- }
- 
- .carousel-img {
-     object-fit: cover;
-     object-position: center;
-     height: 100vh;
-     overflow: hidden;
- }
-
 
 :root {
     --navblue: rgb(202, 250, 250);
 }
 
-.nav-buttons {
-    display: flex;
+.navbar {
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-#dropdownMenuButton {
-    background-color: #00FFFF;
-    border-radius: 5px;
-    margin-right: 10px;
-    padding: 8px;
-    width: 100px;
-    justify-content: right;
-    color: black;
-}
-
-.getInTouchBtn {
-    background-color: #00FFFF;
-    border-radius: 5px;
-    outline: black;
-    width: 100px;
-    padding: 8px;
-}
-
-.landing-logo {
+.landing-logo, .catchphrase {
     margin-top: -2px;
+    margin-left: -50px;
 }
 
-.catchphrase {
-    margin-left: -50px; 
+.btn {
+    background-color: #00FFFF;
+    outline: none;
+    border-radius: 5px;
+    padding: 8px;
 }
 
 #welcome-text {
@@ -204,20 +49,31 @@ body {
     border-radius: 10px;
 }
 
+h3 {
+    text-align: center;
+}
+
 .card-text {
     margin-top: 20px;
     margin-bottom: 25px;
 }
 
-
+.card-body {
+    background: linear-gradient(120deg, rgba(255, 255, 255, 1) 65%, rgba(0, 238, 255, 1) 85%, rgba(0, 255, 255, 1) 100%);
+}
 
 #weather {
-    background: rgb(164,255,255);
-    background: linear-gradient(90deg, rgba(164,255,255,1) 0%, rgba(202,255,255,1) 74%, rgba(222,255,255,1) 100%);
+    background: linear-gradient(90deg, rgba(164, 255, 255, 1) 0%, rgba(202, 255, 255, 1) 74%, rgba(222, 255, 255, 1) 100%);
 }
 
 #weather p {
     text-align: left;
+}
+
+.mainCard {
+    background-color: transparent;
+    border: transparent;
+    border-radius: 0;
 }
 
 .foodTitle {
@@ -230,7 +86,7 @@ body {
     text-align: center;
 }
 
-.foodImg {
+.foodImg, .pizzaImage {
     max-width: 100%;
     max-height: 100%;
     margin-bottom: 20px;
@@ -242,9 +98,18 @@ body {
     display: block;
 }
 
+.food-container {
+    display: flex;
+}
+
+#list {
+    text-align: left;
+    margin-left: 40px;
+}
+
 .movies-card {
-    background:#eee;
-    border: 1px solid #eee;
+    background: #eee;
+    border: transparent;
 }
 
 .carousel {
@@ -255,19 +120,10 @@ body {
 .carousel-caption {
     padding: 10px 20px;
     border: 1px solid white;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
-footer {
-    background: rgba( 255, 255, 255, 0.3 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-        -webkit-backdrop-filter: blur( 4px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-}
-
-.sign-up{
+.sign-up {
     background-color: #5caa59;
     border: 1px solid #5caa59;
     color: #fff;
@@ -278,6 +134,29 @@ footer {
     object-position: center;
     height: 100vh;
     overflow: hidden;
+}
+
+.nav-buttons {
+    display: flex;
+}
+
+#dropdownMenuButton, .getInTouchBtn {
+    background-color: #00FFFF;
+    border-radius: 5px;
+    margin-right: 10px;
+    padding: 8px;
+    width: 100px;
+    justify-content: right;
+    color: black;
+}
+
+footer {
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .hero-section .row {
