--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,11 +9,15 @@ body {
     --navblue: rgb(202, 250, 250);
 }
 
-.navbar {
+/* Navbar & Footer */
+
+.navbar,
+footer {
     position: relative;
 }
 
-.navbar:before {
+.navbar:before,
+footer:before {
     content: ' ';
     display: block;
     position: absolute;
@@ -29,7 +33,8 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-.navbar-content {
+.navbar-content,
+.footer-container {
     position: relative;
 }
 
@@ -63,15 +68,51 @@ body {
     padding: 8px;
 }
 
-#welcome-text {
-    background-color: rgba(228, 170, 82, 0.5);
-    padding: 40px;
-    justify-content: center;
-    border-radius: 20px;
-    width: 600px;
-    margin-top: 100px;
-    margin-bottom: 100px;
+.nav-buttons {
+    display: flex;
 }
+
+#dropdownMenuButton, .getInTouchBtn {
+    background-color: #00FFFF;
+    border-radius: 5px;
+    margin-right: 10px;
+    padding: 8px;
+    width: 100px;
+    justify-content: right;
+    color: black;
+}
+
+.dropdown-item:hover {
+    background-color: #00FFFF;
+}
+
+/* Hero section */
+
+#weather {
+    border-radius: 0 0 10px 10px;
+}
+
+#weather p {
+    text-align: left;
+}
+
+.mainCard {
+    background-color: transparent;
+    border: transparent;
+    border-radius: 0;
+}
+
+.hero-section .row {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.hero-section .card {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+/* All cards */
 
 .card-title {
     text-align: center;
@@ -92,19 +133,7 @@ body {
     background: linear-gradient(137deg, rgba(255,255,255,1) 0%, rgba(234,254,255,1) 76%, rgba(168,249,255,1) 95%, rgba(160,249,255,1) 100%);
 }
 
-#weather {
-    border-radius: 0 0 10px 10px;
-}
-
-#weather p {
-    text-align: left;
-}
-
-.mainCard {
-    background-color: transparent;
-    border: transparent;
-    border-radius: 0;
-}
+/* Recipe and Movies section */
 
 .foodTitle {
     margin: 30px 0 20px 0;
@@ -154,12 +183,6 @@ body {
     background-color: rgba(255, 255, 255, 0.7);
 }
 
-.sign-up {
-    background-color: #5caa59;
-    border: 1px solid #5caa59;
-    color: #fff;
-}
-
 .carousel-img {
     object-fit: cover;
     object-position: center;
@@ -167,42 +190,7 @@ body {
     overflow: hidden;
 }
 
-.nav-buttons {
-    display: flex;
-}
-
-#dropdownMenuButton, .getInTouchBtn {
-    background-color: #00FFFF;
-    border-radius: 5px;
-    margin-right: 10px;
-    padding: 8px;
-    width: 100px;
-    justify-content: right;
-    color: black;
-}
-
-footer {
-    background: rgba(255, 255, 255, 0.3);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-}
-
-.hero-section .row {
-    width: 100%;
-    margin: 0 auto;
-}
-
-.hero-section .card {
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.dropdown-item:hover {
-    background-color: #00FFFF;
-}
+/* Responsive design - media queries */
 
 /* For larger screens */
 @media (min-width: 768px) {
