--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,95 +1,34 @@
-body {
-    background-color: #FFFFFF;
-    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='101' height='101' viewBox='0 0 200 200'%3E%3Cg %3E%3Cpolygon fill='%2300b1b2' points='100 57.1 64 93.1 71.5 100.6 100 72.1'/%3E%3Cpolygon fill='%2300d7d8' points='100 57.1 100 72.1 128.6 100.6 136.1 93.1'/%3E%3Cpolygon fill='%2300b1b2' points='100 163.2 100 178.2 170.7 107.5 170.8 92.4'/%3E%3Cpolygon fill='%2300d7d8' points='100 163.2 29.2 92.5 29.2 107.5 100 178.2'/%3E%3Cpath fill='%2300FFFF' d='M100 21.8L29.2 92.5l70.7 70.7l70.7-70.7L100 21.8z M100 127.9L64.6 92.5L100 57.1l35.4 35.4L100 127.9z'/%3E%3Cpolygon fill='%2300a0b8' points='0 157.1 0 172.1 28.6 200.6 36.1 193.1'/%3E%3Cpolygon fill='%2300c2db' points='70.7 200 70.8 192.4 63.2 200'/%3E%3Cpolygon fill='%2304E6FF' points='27.8 200 63.2 200 70.7 192.5 0 121.8 0 157.2 35.3 192.5'/%3E%3Cpolygon fill='%2300c2db' points='200 157.1 164 193.1 171.5 200.6 200 172.1'/%3E%3Cpolygon fill='%2300a0b8' points='136.7 200 129.2 192.5 129.2 200'/%3E%3Cpolygon fill='%2304E6FF' points='172.1 200 164.6 192.5 200 157.1 200 157.2 200 121.8 200 121.8 129.2 192.5 136.7 200'/%3E%3Cpolygon fill='%2300a0b8' points='129.2 0 129.2 7.5 200 78.2 200 63.2 136.7 0'/%3E%3Cpolygon fill='%2304E6FF' points='200 27.8 200 27.9 172.1 0 136.7 0 200 63.2 200 63.2'/%3E%3Cpolygon fill='%2300c2db' points='63.2 0 0 63.2 0 78.2 70.7 7.5 70.7 0'/%3E%3Cpolygon fill='%2304E6FF' points='0 63.2 63.2 0 27.8 0 0 27.8'/%3E%3C/g%3E%3C/svg%3E"); */
-    background-attachment: fixed;
-    font-family: 'Raleway', sans-serif;
-}
-
 :root {
-    --navblue: rgb(202, 250, 250);
+    --pink: #EFEBF2;
+    --purple: #30105A;
+    --btnPink: #E3BAC6;
+    --grey: grey;
 }
 
-/* Navbar & Footer */
-
-.navbar,
-footer {
-    position: relative;
+body {
+    background-color: var(--pink);
 }
 
-.navbar:before,
-footer:before {
-    content: ' ';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='101' height='101' viewBox='0 0 200 200'%3E%3Cg %3E%3Cpolygon fill='%2300b1b2' points='100 57.1 64 93.1 71.5 100.6 100 72.1'/%3E%3Cpolygon fill='%2300d7d8' points='100 57.1 100 72.1 128.6 100.6 136.1 93.1'/%3E%3Cpolygon fill='%2300b1b2' points='100 163.2 100 178.2 170.7 107.5 170.8 92.4'/%3E%3Cpolygon fill='%2300d7d8' points='100 163.2 29.2 92.5 29.2 107.5 100 178.2'/%3E%3Cpath fill='%2300FFFF' d='M100 21.8L29.2 92.5l70.7 70.7l70.7-70.7L100 21.8z M100 127.9L64.6 92.5L100 57.1l35.4 35.4L100 127.9z'/%3E%3Cpolygon fill='%2300a0b8' points='0 157.1 0 172.1 28.6 200.6 36.1 193.1'/%3E%3Cpolygon fill='%2300c2db' points='70.7 200 70.8 192.4 63.2 200'/%3E%3Cpolygon fill='%2304E6FF' points='27.8 200 63.2 200 70.7 192.5 0 121.8 0 157.2 35.3 192.5'/%3E%3Cpolygon fill='%2300c2db' points='200 157.1 164 193.1 171.5 200.6 200 172.1'/%3E%3Cpolygon fill='%2300a0b8' points='136.7 200 129.2 192.5 129.2 200'/%3E%3Cpolygon fill='%2304E6FF' points='172.1 200 164.6 192.5 200 157.1 200 157.2 200 121.8 200 121.8 129.2 192.5 136.7 200'/%3E%3Cpolygon fill='%2300a0b8' points='129.2 0 129.2 7.5 200 78.2 200 63.2 136.7 0'/%3E%3Cpolygon fill='%2304E6FF' points='200 27.8 200 27.9 172.1 0 136.7 0 200 63.2 200 63.2'/%3E%3Cpolygon fill='%2300c2db' points='63.2 0 0 63.2 0 78.2 70.7 7.5 70.7 0'/%3E%3Cpolygon fill='%2304E6FF' points='0 63.2 63.2 0 27.8 0 0 27.8'/%3E%3C/g%3E%3C/svg%3E");
-    opacity: 0.3;
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border: 1px solid rgba(255, 255, 255, 0.18);
+nav {
+    background-color: var(--btnPink);
+    color: white;
 }
 
-.navbar-content,
-.footer-container {
-    position: relative;
+nav h4 {
+    margin-left: 20px;
 }
 
-.landing-logo a {
-    padding: 0;
-    display: inline-flex; 
-    align-items: center; 
+.card-title {
+    text-align: center;
+    margin: -30px 30% 0 30%;
+    padding: 5px;
+    background-color: var(--purple);
+    color: white;
+    border-radius: 20px;
 }
 
-.landing-logo img {
-    max-height: 100%; 
-    max-width: 100%; 
-    height: auto; 
-    margin: 5px; 
-}
-
-.navbar .container-fluid {
-    display: flex; 
-    align-items: center; 
-}
-
-.navbar h3 {
-    flex-grow: 1;
-    text-align: center; 
-}
-
-.btn {
-    background-color: #00FFFF;
-    outline: none;
-    border-radius: 5px;
-    padding: 8px;
-}
-
-.nav-buttons {
-    display: flex;
-}
-
-#dropdownMenuButton, .getInTouchBtn {
-    background-color: #00FFFF;
-    border-radius: 5px;
-    margin-right: 10px;
-    padding: 8px;
-    width: 100px;
-    justify-content: right;
-    color: black;
-}
-
-.dropdown-item:hover {
-    background-color: #00FFFF;
-}
-
-/* Hero section */
-
-#weather {
-    border-radius: 0 0 10px 10px;
+.hero-text {
+    padding-top: 25px;
 }
 
 #weather p {
@@ -99,45 +38,7 @@ footer:before {
 .mainCard {
     background-color: transparent;
     border: transparent;
-    border-radius: 0;
 }
-
-.hero-section .row {
-    width: 100%;
-    margin: 0 auto;
-}
-
-.hero-section .card {
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.hero-text {
-    padding-top: 25px;
-}
-
-/* All cards */
-
-.card-title {
-    text-align: center;
-    margin: -30px 30% 0 30%;
-    padding: 5px;
-    border: 2px solid var(--navblue);
-    background-color: white;
-    border-radius: 10px;
-}
-
-.card-text {
-    margin-top: 20px;
-    margin-bottom: 25px;
-}
-
-.card-body {
-    background: rgb(255,255,255);
-    background: linear-gradient(137deg, rgba(255,255,255,1) 0%, rgba(234,254,255,1) 76%, rgba(168,249,255,1) 95%, rgba(160,249,255,1) 100%);
-}
-
-/* Recipe and Movies section */
 
 .foodTitle {
     margin: 30px 0 20px 0;
@@ -153,7 +54,6 @@ footer:before {
     max-width: 100%;
     max-height: 100%;
     margin-bottom: 20px;
-    border: 2px solid var(--navblue);
     padding: 10px;
     width: 70%;
 }
@@ -194,18 +94,18 @@ footer:before {
     overflow: hidden;
 }
 
-/* Responsive design - media queries */
-
-/* For larger screens */
-@media (min-width: 768px) {
-    .hero-section .row {
-        max-width: 1140px;
-    }
+.footer {
+    background-color: var(--btnPink);
+    color: white;
+    text-align: center;
+    padding: 8px;
+    font-weight: 500;
 }
 
-/* Responsive padding and margin adjustments */
-@media (max-width: 768px) {
-    .card {
-        margin: 5px;
-    }
+footer a {
+    color: white;
+}
+
+.footerText {
+    margin-bottom: 5px;
 }
